doc/security/audits/tools/v3.0.0-rc2/aderyn-report.md
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: PUSH0 Opcode](#l-3-push0-opcode)
  - [L-4: Empty Block](#l-4-empty-block)
  - [L-5: Loop Contains `require`/`revert`](#l-5-loop-contains-requirerevert)
  - [L-6: Costly operations inside loop](#l-6-costly-operations-inside-loop)
  - [L-7: Unchecked Return](#l-7-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 14 |
| Total nSLOC | 425 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| src/RuleEngineBase.sol | 127 |
| src/deployment/RuleEngine.sol | 47 |
| src/deployment/RuleEngineOwnable.sol | 39 |
| src/interfaces/IERC3643Compliance.sol | 13 |
| src/interfaces/IRule.sol | 5 |
| src/interfaces/IRulesManagementModule.sol | 12 |
| src/modules/ERC2771ModuleStandalone.sol | 6 |
| src/modules/ERC3643ComplianceModule.sol | 58 |
| src/modules/RulesManagementModule.sol | 83 |
| src/modules/VersionModule.sol | 8 |
| src/modules/library/ComplianceInterfaceId.sol | 5 |
| src/modules/library/RuleEngineInvariantStorage.sol | 5 |
| src/modules/library/RuleInterfaceId.sol | 4 |
| src/modules/library/RulesManagementModuleInvariantStorage.sol | 13 |
| **Total** | **425** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 0 |
| Low | 7 |


# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>6 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 21](src/deployment/RuleEngine.sol#L21)

	```solidity
	contract RuleEngine is ERC2771ModuleStandalone, RuleEngineBase, AccessControl {
	```

- Found in src/deployment/RuleEngine.sol [Line: 63](src/deployment/RuleEngine.sol#L63)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyRole(COMPLIANCE_MANAGER_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 64](src/deployment/RuleEngine.sol#L64)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyRole(RULES_MANAGEMENT_ROLE) {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 21](src/deployment/RuleEngineOwnable.sol#L21)

	```solidity
	contract RuleEngineOwnable is ERC2771ModuleStandalone, RuleEngineBase, Ownable {
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 44](src/deployment/RuleEngineOwnable.sol#L44)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 49](src/deployment/RuleEngineOwnable.sol#L49)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>12 Found Instances</summary>


- Found in src/RuleEngineBase.sol [Line: 3](src/RuleEngineBase.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngine.sol [Line: 3](src/deployment/RuleEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 3](src/deployment/RuleEngineOwnable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643Compliance.sol [Line: 3](src/interfaces/IERC3643Compliance.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRule.sol [Line: 3](src/interfaces/IRule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRulesManagementModule.sol [Line: 3](src/interfaces/IRulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC2771ModuleStandalone.sol [Line: 3](src/modules/ERC2771ModuleStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceModule.sol [Line: 3](src/modules/ERC3643ComplianceModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/RulesManagementModule.sol [Line: 3](src/modules/RulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/VersionModule.sol [Line: 3](src/modules/VersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleEngineInvariantStorage.sol [Line: 3](src/modules/library/RuleEngineInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RulesManagementModuleInvariantStorage.sol [Line: 3](src/modules/library/RulesManagementModuleInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-3: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>14 Found Instances</summary>


- Found in src/RuleEngineBase.sol [Line: 3](src/RuleEngineBase.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngine.sol [Line: 3](src/deployment/RuleEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 3](src/deployment/RuleEngineOwnable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643Compliance.sol [Line: 3](src/interfaces/IERC3643Compliance.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRule.sol [Line: 3](src/interfaces/IRule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRulesManagementModule.sol [Line: 3](src/interfaces/IRulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC2771ModuleStandalone.sol [Line: 3](src/modules/ERC2771ModuleStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceModule.sol [Line: 3](src/modules/ERC3643ComplianceModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/RulesManagementModule.sol [Line: 3](src/modules/RulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/VersionModule.sol [Line: 3](src/modules/VersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/ComplianceInterfaceId.sol [Line: 3](src/modules/library/ComplianceInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleEngineInvariantStorage.sol [Line: 3](src/modules/library/RuleEngineInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleInterfaceId.sol [Line: 3](src/modules/library/RuleInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RulesManagementModuleInvariantStorage.sol [Line: 3](src/modules/library/RulesManagementModuleInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-4: Empty Block

Consider removing empty blocks.

<details><summary>4 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 63](src/deployment/RuleEngine.sol#L63)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyRole(COMPLIANCE_MANAGER_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 64](src/deployment/RuleEngine.sol#L64)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyRole(RULES_MANAGEMENT_ROLE) {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 44](src/deployment/RuleEngineOwnable.sol#L44)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 49](src/deployment/RuleEngineOwnable.sol#L49)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

</details>



## L-5: Loop Contains `require`/`revert`

Avoid `require` / `revert` statements in a loop because a single bad item can cause the whole transaction to fail. It's better to forgive on fail and return failed elements post processing of the loop

<details><summary>1 Found Instances</summary>


- Found in src/modules/RulesManagementModule.sol [Line: 52](src/modules/RulesManagementModule.sol#L52)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



## L-6: Costly operations inside loop

Invoking `SSTORE` operations in loops may waste gas. Use a local variable to hold the loop computation result.

<details><summary>1 Found Instances</summary>


- Found in src/modules/RulesManagementModule.sol [Line: 52](src/modules/RulesManagementModule.sol#L52)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



## L-7: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>1 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 35](src/deployment/RuleEngine.sol#L35)

	```solidity
	        _grantRole(DEFAULT_ADMIN_ROLE, admin);
	```

</details>



