doc/security/audits/tools/v3.0.0-rc3/aderyn-report.md
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unspecific Solidity Pragma](#l-2-unspecific-solidity-pragma)
  - [L-3: PUSH0 Opcode](#l-3-push0-opcode)
  - [L-4: Modifier Invoked Only Once](#l-4-modifier-invoked-only-once)
  - [L-5: Empty Block](#l-5-empty-block)
  - [L-6: Loop Contains `require`/`revert`](#l-6-loop-contains-requirerevert)
  - [L-7: Costly operations inside loop](#l-7-costly-operations-inside-loop)
  - [L-8: Unchecked Return](#l-8-unchecked-return)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 21 |
| Total nSLOC | 607 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| src/RuleEngineBase.sol | 140 |
| src/RuleEngineOwnableShared.sol | 33 |
| src/deployment/RuleEngine.sol | 63 |
| src/deployment/RuleEngineOwnable.sol | 26 |
| src/deployment/RuleEngineOwnable2Step.sol | 32 |
| src/interfaces/IERC3643Compliance.sol | 12 |
| src/interfaces/IERC3643ComplianceExtended.sol | 12 |
| src/interfaces/IRule.sol | 5 |
| src/interfaces/IRulesManagementModule.sol | 14 |
| src/modules/ERC2771ModuleStandalone.sol | 6 |
| src/modules/ERC3643ComplianceExtendedModule.sol | 48 |
| src/modules/ERC3643ComplianceModule.sol | 58 |
| src/modules/RulesManagementModule.sol | 105 |
| src/modules/VersionModule.sol | 8 |
| src/modules/library/ComplianceInterfaceId.sol | 6 |
| src/modules/library/ERC1404InterfaceId.sol | 4 |
| src/modules/library/Ownable2StepInterfaceId.sol | 4 |
| src/modules/library/OwnableInterfaceId.sol | 4 |
| src/modules/library/RuleEngineInvariantStorage.sol | 5 |
| src/modules/library/RuleInterfaceId.sol | 4 |
| src/modules/library/RulesManagementModuleInvariantStorage.sol | 18 |
| **Total** | **607** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 0 |
| Low | 8 |


# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>14 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 20](src/deployment/RuleEngine.sol#L20)

	```solidity
	contract RuleEngine is ERC2771ModuleStandalone, RuleEngineBase, AccessControlEnumerable {
	```

- Found in src/deployment/RuleEngine.sol [Line: 83](src/deployment/RuleEngine.sol#L83)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyRole(COMPLIANCE_MANAGER_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 84](src/deployment/RuleEngine.sol#L84)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyRole(RULES_MANAGEMENT_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 85](src/deployment/RuleEngine.sol#L85)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 12](src/deployment/RuleEngineOwnable.sol#L12)

	```solidity
	contract RuleEngineOwnable is RuleEngineOwnableShared, Ownable {
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 27](src/deployment/RuleEngineOwnable.sol#L27)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 28](src/deployment/RuleEngineOwnable.sol#L28)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 33](src/deployment/RuleEngineOwnable.sol#L33)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 39](src/deployment/RuleEngineOwnable.sol#L39)

	```solidity
	    function transferOwnership(address newOwner) public virtual override onlyOwner {
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 15](src/deployment/RuleEngineOwnable2Step.sol#L15)

	```solidity
	contract RuleEngineOwnable2Step is RuleEngineOwnableShared, Ownable2Step {
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 30](src/deployment/RuleEngineOwnable2Step.sol#L30)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 31](src/deployment/RuleEngineOwnable2Step.sol#L31)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 36](src/deployment/RuleEngineOwnable2Step.sol#L36)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 42](src/deployment/RuleEngineOwnable2Step.sol#L42)

	```solidity
	    function transferOwnership(address newOwner) public virtual override onlyOwner {
	```

</details>



## L-2: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>16 Found Instances</summary>


- Found in src/RuleEngineBase.sol [Line: 3](src/RuleEngineBase.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/RuleEngineOwnableShared.sol [Line: 3](src/RuleEngineOwnableShared.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngine.sol [Line: 3](src/deployment/RuleEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 3](src/deployment/RuleEngineOwnable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 3](src/deployment/RuleEngineOwnable2Step.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643Compliance.sol [Line: 3](src/interfaces/IERC3643Compliance.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643ComplianceExtended.sol [Line: 3](src/interfaces/IERC3643ComplianceExtended.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRule.sol [Line: 3](src/interfaces/IRule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRulesManagementModule.sol [Line: 3](src/interfaces/IRulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC2771ModuleStandalone.sol [Line: 3](src/modules/ERC2771ModuleStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 3](src/modules/ERC3643ComplianceExtendedModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceModule.sol [Line: 3](src/modules/ERC3643ComplianceModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/RulesManagementModule.sol [Line: 3](src/modules/RulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/VersionModule.sol [Line: 3](src/modules/VersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleEngineInvariantStorage.sol [Line: 3](src/modules/library/RuleEngineInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RulesManagementModuleInvariantStorage.sol [Line: 3](src/modules/library/RulesManagementModuleInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-3: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>21 Found Instances</summary>


- Found in src/RuleEngineBase.sol [Line: 3](src/RuleEngineBase.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/RuleEngineOwnableShared.sol [Line: 3](src/RuleEngineOwnableShared.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngine.sol [Line: 3](src/deployment/RuleEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 3](src/deployment/RuleEngineOwnable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 3](src/deployment/RuleEngineOwnable2Step.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643Compliance.sol [Line: 3](src/interfaces/IERC3643Compliance.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IERC3643ComplianceExtended.sol [Line: 3](src/interfaces/IERC3643ComplianceExtended.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRule.sol [Line: 3](src/interfaces/IRule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/interfaces/IRulesManagementModule.sol [Line: 3](src/interfaces/IRulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC2771ModuleStandalone.sol [Line: 3](src/modules/ERC2771ModuleStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 3](src/modules/ERC3643ComplianceExtendedModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/ERC3643ComplianceModule.sol [Line: 3](src/modules/ERC3643ComplianceModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/RulesManagementModule.sol [Line: 3](src/modules/RulesManagementModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/VersionModule.sol [Line: 3](src/modules/VersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/ComplianceInterfaceId.sol [Line: 3](src/modules/library/ComplianceInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/ERC1404InterfaceId.sol [Line: 3](src/modules/library/ERC1404InterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/Ownable2StepInterfaceId.sol [Line: 3](src/modules/library/Ownable2StepInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/OwnableInterfaceId.sol [Line: 3](src/modules/library/OwnableInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleEngineInvariantStorage.sol [Line: 3](src/modules/library/RuleEngineInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RuleInterfaceId.sol [Line: 3](src/modules/library/RuleInterfaceId.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in src/modules/library/RulesManagementModuleInvariantStorage.sol [Line: 3](src/modules/library/RulesManagementModuleInvariantStorage.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-4: Modifier Invoked Only Once

Consider removing the modifier or inlining the logic into the calling function.

<details><summary>1 Found Instances</summary>


- Found in src/modules/RulesManagementModule.sol [Line: 21](src/modules/RulesManagementModule.sol#L21)

	```solidity
	    modifier onlyRulesLimitManager() {
	```

</details>



## L-5: Empty Block

Consider removing empty blocks.

<details><summary>9 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 83](src/deployment/RuleEngine.sol#L83)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyRole(COMPLIANCE_MANAGER_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 84](src/deployment/RuleEngine.sol#L84)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyRole(RULES_MANAGEMENT_ROLE) {}
	```

- Found in src/deployment/RuleEngine.sol [Line: 85](src/deployment/RuleEngine.sol#L85)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 27](src/deployment/RuleEngineOwnable.sol#L27)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 28](src/deployment/RuleEngineOwnable.sol#L28)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable.sol [Line: 33](src/deployment/RuleEngineOwnable.sol#L33)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 30](src/deployment/RuleEngineOwnable2Step.sol#L30)

	```solidity
	    function _onlyRulesManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 31](src/deployment/RuleEngineOwnable2Step.sol#L31)

	```solidity
	    function _onlyRulesLimitManager() internal virtual override onlyOwner {}
	```

- Found in src/deployment/RuleEngineOwnable2Step.sol [Line: 36](src/deployment/RuleEngineOwnable2Step.sol#L36)

	```solidity
	    function _onlyComplianceManager() internal virtual override onlyOwner {}
	```

</details>



## L-6: Loop Contains `require`/`revert`

Avoid `require` / `revert` statements in a loop because a single bad item can cause the whole transaction to fail. It's better to forgive on fail and return failed elements post processing of the loop

<details><summary>4 Found Instances</summary>


- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 17](src/modules/ERC3643ComplianceExtendedModule.sol#L17)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 24](src/modules/ERC3643ComplianceExtendedModule.sol#L24)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 43](src/modules/ERC3643ComplianceExtendedModule.sol#L43)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/RulesManagementModule.sol [Line: 60](src/modules/RulesManagementModule.sol#L60)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



## L-7: Costly operations inside loop

Invoking `SSTORE` operations in loops may waste gas. Use a local variable to hold the loop computation result.

<details><summary>4 Found Instances</summary>


- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 17](src/modules/ERC3643ComplianceExtendedModule.sol#L17)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 24](src/modules/ERC3643ComplianceExtendedModule.sol#L24)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/ERC3643ComplianceExtendedModule.sol [Line: 43](src/modules/ERC3643ComplianceExtendedModule.sol#L43)

	```solidity
	        for (uint256 i = 0; i < tokens.length; ++i) {
	```

- Found in src/modules/RulesManagementModule.sol [Line: 60](src/modules/RulesManagementModule.sol#L60)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



## L-8: Unchecked Return

Function returns a value but it is ignored. Consider checking the return value.

<details><summary>1 Found Instances</summary>


- Found in src/deployment/RuleEngine.sol [Line: 36](src/deployment/RuleEngine.sol#L36)

	```solidity
	        _grantRole(DEFAULT_ADMIN_ROLE, admin);
	```

</details>



